wip: added csp, currently nonce is not working

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ semantic_version
 PyJWT
 requests_oauthlib
 python-docx
+django-csp==4.0b7
 
 
 git+https://github.com/flaxandteal/arches-orm@v0.1.5
