--- a/coral/package.json
+++ b/coral/package.json
@@ -31,6 +31,7 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
+        "@azure/msal-browser": "^4.9.1",
         "arches": "archesproject/arches#dev/7.6.x",
         "docx-preview": "^0.3.5",
         "native-file-system-adapter": "^3.0.1",
