test: updated requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ requests_oauthlib
 python-docx
 django-csp==4.0b7
 
-git+https://github.com/flaxandteal/arches-orm@v0.2.2
+git+https://github.com/flaxandteal/arches-orm@v0.2.3-emerald
 
 pika
 django-authorization
