--- a/.github/workflows/security-scan-weekly.yml
+++ b/.github/workflows/security-scan-weekly.yml
@@ -1,8 +1,13 @@
 name: Scan Docker Image in GitHub Packages with Trivy
+#on:
+#  schedule:
+#    - cron: '0 0 * * 0'  # Weekly on Sunday at midnight UTC
 on:
-  schedule:
-    - cron: '0 0 * * 0'  # Weekly on Sunday at midnight UTC
-
+  push:
+    branches:
+      - '**'
+  workflow_dispatch:
+  
 permissions:
   contents: read
   packages: read  # Needed to pull from GitHub Packages
