--- a/.github/workflows/security-scan-weekly.yml
+++ b/.github/workflows/security-scan-weekly.yml
@@ -14,7 +14,7 @@ permissions:
   security-events: write  # Needed for SARIF upload
 
 jobs:
-  scan-package:
+  security-scans:
     name: Scan Docker Image
     runs-on: ubuntu-latest
     steps:
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v4
     
       - name: Scan with Trivy
-        uses: ./.github/actions/scan-package
+        uses: ./.github/actions/security/scan-package.yml
         with:
           image-ref: ghcr.io/${{ github.repository_owner }}/arches_coral:${{ github.sha }}
           sarif-output: trivy-results.sarif
