--- a/.github/workflows/security-scan-weekly.yml
+++ b/.github/workflows/security-scan-weekly.yml
@@ -16,6 +16,7 @@ permissions:
 jobs:
   security-scans:
     permissions:
+      security-events: write  # For SARIF upload
       actions: write
       contents: read
     name: Scan Docker Image
