feat): add new models to arches orm

--- a/coral/wkrm.toml
+++ b/coral/wkrm.toml
@@ -113,3 +113,15 @@ graphid = "78b32d8c-b6f2-11ea-af42-f875a44e0e11"
 ["Arches Plugin"]
 model_name = "Arches Plugin"
 graphid = "e828f30f-f4ef-4e9b-aeb0-3998bcb7678a"
+
+["Risk Assessment"]
+model_name = "Risk Assessment"
+graphid = "eb8e5877-7e36-416d-95a9-d0ff8045fd26"
+
+["Ranger Inspection"]
+model_name = "Ranger Inspection"
+graphid = "eded3b45-42d1-4bb7-938e-2bc69ad82dab"
+
+["State Care Condition Survey"]
+model_name = "State Care Condition"
+graphid = "c0098070-d052-4449-982b-952507306c03"
