--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -73,8 +73,8 @@ jobs:
                 flag {print}' | sed '/^\s*$/d' | grep -v '^\s*[-*]\s*\[[xX ]\]')
               if [[ -n "$CONTENT" ]]; then
                 # Create the section header if it doesn't exist (using level "##")
-                if ! grep -q "^## $section\$" "$FILE"; then
-                  echo -e "## $section\n" >> "$FILE"
+                if ! grep -q "^### $section\$" "$FILE"; then
+                  echo -e "### $section\n" >> "$FILE"
                 fi
                 # Append each change line if not already present
                 echo "$CONTENT" | while read -r line; do
