--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -32,8 +32,8 @@ jobs:
           mkdir -p changelogs
           echo "${{ steps.vars.outputs.pr_body }}" | base64 -d > "$FILE" 
 
-          chmod +x ./update_changelog.sh
-          ./update_changelog.sh "$FILE" "${{ steps.vars.outputs.pr_title }}" "${{ steps.vars.outputs.pr_user }}" "${{ steps.vars.outputs.pr_number }}" "${{ steps.vars.outputs.pr_link }}" "${{ steps.vars.outputs.branch_name }}"
+          chmod +x ./.github/workflows/update_changelog.sh
+          ./.github/workflows/update_changelog.sh "$FILE" "${{ steps.vars.outputs.pr_title }}" "${{ steps.vars.outputs.pr_user }}" "${{ steps.vars.outputs.pr_number }}" "${{ steps.vars.outputs.pr_link }}" "${{ steps.vars.outputs.branch_name }}"
 
       - name: Commit Changelog
         run: |
